--- a/templates/doughnut9/index.html
+++ b/templates/doughnut9/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Lexington Gardens Affordable Housing</title>
+        <title>Participatory Budgeting Paper and Online Voting</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
 
