--- a/templates/doughnut9/index.html
+++ b/templates/doughnut9/index.html
@@ -17,7 +17,7 @@ Chart.defaults.global.responsive = true
 Chart.defaults.global.maintainAspectRatio = true
 Chart.defaults.global.legend.display = false
 Chart.defaults.global.tooltips.bodyFontSize = 12
-// Chart.defaults.global.tooltips.fontFamily = 'open sans'
+Chart.defaults.global.tooltips.fontFamily = 'open sans'
 
 
 
