--- a/templates/doughnut10/index.html
+++ b/templates/doughnut10/index.html
@@ -2,46 +2,46 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Participatory Budgeting Paper and Online Voting</title>
+        <title>Lexington Gardens Affordable Housing</title>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
 
     </head>
     <body>
 
 
-<canvas id="doughnut9" width="400" height="400"></canvas>
+<canvas id="doughnut8" width="400" height="400"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
 Chart.defaults.global.maintainAspectRatio = true
 Chart.defaults.global.legend.display = false
-//Chart.defaults.global.tooltips.bodyFontSize = 12
-//Chart.defaults.global.tooltips.fontFamily = 'open sans'
+Chart.defaults.global.tooltips.bodyFontSize = 12
+Chart.defaults.global.tooltips.fontFamily = 'open sans'
 
 
 
 
 
-var ctx = document.getElementById("doughnut9");
+var ctx = document.getElementById("doughnut8");
 
 var myChart = new Chart(ctx, {
     type: 'doughnut',
     data: {
         labels: [
-          "Paper Ballots 2017",
-          "Digital Ballots 2017",
-          "External Ballots 2017"
-
+          "Income Less Than $25,890",
+          "Income Less Than $43,150",
+          "Income Less Than $69,040",
+          "Income Less Than $112,190",
                 ],
         datasets: [{
-            label: 'Participatory Budgeting Paper and Online Voting',
+            label: 'Lexington Gardens Affordable Housing',
             backgroundColor:["#BE4BDB","#228AE6","#82C91E","#F59F00"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
             hoverBorderColor: "#eeeeee",
-            data: [65.19,29.59,5.23]
+            data: [20,30,30,20]
             }]
     },
     options: {
