--- a/templates/doughnut11/index.html
+++ b/templates/doughnut11/index.html
@@ -26,7 +26,7 @@ var myChart = new Chart(ctx, {
         labels: ["Education 59.7%","Arts, Culture & Community 9%","Parks & Recreation 8.2%","Transit 6.7%","Housing 6%","Public Safety 5.2%","Streets 2.2%","Environment 1.5%","Youth 1.5%"],
         datasets: [{
             label: 'Type of Projects Funded 2017',
-            backgroundColor:["#228AE6","#12B886", "#BE4BDB","#F59F00","#82C91E", "#228AE6","#12B886", "#BE4BDB","#F59F00","#82C91E", "#82C91E"],
+            backgroundColor:["#228AE6","#F59F00","#2F56A6","#CACACA","#12B886", "#BE4BDB","#A07952","#82C91E","#D05D4E",],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
