font color change in legend

--- a/templates/doughnut12/index.html
+++ b/templates/doughnut12/index.html
@@ -16,7 +16,8 @@
 
 Chart.defaults.global.responsive = true
 Chart.defaults.global.maintainAspectRatio = true
-//Chart.defaults.global.legend.display= true
+Chart.defaults.global.legend.display= true
+Chart.defaults.global.legend.labels.fontColor = '#DFDBCF'
 
 var ctx = document.getElementById("doughnut2");
 
