--- a/templates/doughnut15/index.html
+++ b/templates/doughnut15/index.html
@@ -27,7 +27,7 @@ var myChart = new Chart(ctx, {
         labels: ["Bail Made at Arraignment 28%", "Bail Not Made at Arraignment 72%"],
         datasets: [{
             label: 'Bail Set for Non-Felonies in NYC 2015',
-            backgroundColor:["#23417D","#2F56A6","#23417D","#2F56A6","#23417D","#2F56A6"],
+            backgroundColor:["#666666","#E6E6E6","#F9F9F9","#CACACA"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
