--- a/templates/doughnut14/index.html
+++ b/templates/doughnut14/index.html
@@ -31,7 +31,7 @@ var myChart = new Chart(ctx, {
                   "$500 or less (36%)"],
         datasets: [{
             label: 'Bail Set for Non-Felonies in NYC 2015',
-            backgroundColor:["#23417D","#2F56A6","#666666","#E6E6E6","#F9F9F9","#CACACA"],
+            backgroundColor:["#F9F9F9","#E6E6E6","#666666","#2F56A6","#23417D"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
