changed language and colors

--- a/templates/doughnut15/index.html
+++ b/templates/doughnut15/index.html
@@ -24,10 +24,10 @@ var ctx = document.getElementById("doughnut14");
 var myChart = new Chart(ctx, {
     type: 'doughnut',
     data: {
-        labels: ["Bail Made at Arraignment 28%", "Bail Not Made at Arraignment 72%"],
+        labels: ["Paid Immediately 28%", "Paid While at Rikers 72%"],
         datasets: [{
             label: 'Bail Set for Non-Felonies in NYC 2015',
-            backgroundColor:["#E6E6E6","#666666",,
+            backgroundColor:["#666666","#E6E6E6"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
