--- a/templates/table/index.html
+++ b/templates/table/index.html
@@ -51,7 +51,7 @@ h1 {
 
 <h1>Community Media Glossary</h1>
 
-<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for English.." title="Type in a word">
+<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for word..." title="Type in a word">
 
 <table id="myTable">
   <tr class="header">
