changed hover color

--- a/templates/bar7/index.html
+++ b/templates/bar7/index.html
@@ -85,7 +85,7 @@ var myChart = new Chart(ctx, {
             backgroundColor:["#2F56A6","#23417D","#2F56A6","#23417D","#2F56A6","#23417D","#2F56A6","#23417D","#2F56A6","#23417D","#2F56A6","#23417D",],
             borderColor: "#eeeeee",
             borderWidth: 0,
-            hoverBackgroundColor: "#9E9E9E",
+            hoverBackgroundColor: "#D05D4E",
             hoverBorderColor: "#eeeeee",
             data: [539800, 510962, 544678, 536021, 490604, 476801, 424883, 359537, 297413,	267763, 224080]
         }]
