--- a/templates/table/index.html
+++ b/templates/table/index.html
@@ -49,7 +49,7 @@ h1 {
 </head>
 <body>
 
-<h1>Community Media Glossary</h1>
+<h1>Glossary of commonly used terms at the Counci</h1>
 
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for word..." title="Type in a word">
 
