--- a/templates/cards/index.html
+++ b/templates/cards/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Materialize css cards list - dynamic version</title>
-
-
+  
+  
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css'>
 <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
 
       <link rel="stylesheet" href="css/style.css">
 
-
+  
 </head>
 
 <body>
@@ -142,7 +142,7 @@
                 <span class="card__date__month">Mai</span>
               </div>
               <div class="card__meta">
-                <a href="#"><i class="small material-icons">room</i> dance club</a>
+                <a href="#"><i class="small material-icons">room</i>Savoy dance club</a>
                 <time>17th March</time>
               </div>
               <span class="card-title grey-text text-darken-4">Savoy swing up</span>
@@ -207,7 +207,7 @@
                 <a href="#"><i class="small material-icons">room</i>Web Design</a>
                 <time>17th March</time>
               </div>
-              <span class="card-title grey-text text-darken-4">Pizza Party</span>
+              <span class="card-title grey-text text-darken-4">Savoy swing up</span>
 
               <p class="card-subtitle grey-text text-darken-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis pellentesque lacus eleifend lacinia...lacus eleifend lacinia... go!</p>
               <span class="text-darken-2 card-info"><i class="small material-icons">label</i>&nbsp;lindy hop, balboa, charleston</span>
