--- a/templates/cards2/index.html
+++ b/templates/cards2/index.html
@@ -134,7 +134,8 @@
       <div id="card-container" class="row">
         <!-- Col: Card 1 -->
         <div class="col s12 m6 l4">
-          <!-- Card 1 -->
+
+            <!-- Card 1 -->
           <div class="card">
             <div class="card-content white-text">
               <div class="card__date">
@@ -142,10 +143,10 @@
                 <span class="card__date__month">Mai</span>
               </div>
               <div class="card__meta">
-                <a href="#"><i class="small material-icons">room</i> dance club</a>
+                <a href="#"><i class="small material-icons">room</i>Savoy dance club</a>
                 <time>17th March</time>
               </div>
-              <span class="card-title grey-text text-darken-4">Savoy swing up</span>
+              <span class="card-title grey-text text-darken-4">Pizza Party swing up</span>
 
               <p class="card-subtitle grey-text text-darken-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis pellentesque lacus eleifend lacinia...lacus eleifend lacinia... go!</p>
               <div class="row card-row">
@@ -207,7 +208,7 @@
                 <a href="#"><i class="small material-icons">room</i>Web Design</a>
                 <time>17th March</time>
               </div>
-              <span class="card-title grey-text text-darken-4">Pizza Party</span>
+              <span class="card-title grey-text text-darken-4">Savoy swing up</span>
 
               <p class="card-subtitle grey-text text-darken-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis pellentesque lacus eleifend lacinia...lacus eleifend lacinia... go!</p>
               <span class="text-darken-2 card-info"><i class="small material-icons">label</i>&nbsp;lindy hop, balboa, charleston</span>
@@ -218,10 +219,12 @@
             </div>
           </div>
           <!-- End of card -->
+
         </div>
 
       </div>
     </div>
+
   </div>
 </div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
