--- a/templates/doughnut16/index.html
+++ b/templates/doughnut16/index.html
@@ -23,7 +23,7 @@ var ctx = document.getElementById("doughnut2");
 var myChart = new Chart(ctx, {
     type: 'doughnut',
     data: {
-        labels: ["Ballfields or Basketball","Community Garden","Park","Pier","Playground","Walkway or Bridge"],
+        labels: ["Playgrounds","Walkways or Bridges","Ballfields or Basketball","Parks","Community Gardens","Piers"],
         datasets: [{
             label: 'Type of Projects Funded',
             backgroundColor:["#82C91E","#2F56A6","#82C91E","#2F56A6","#82C91E","#2F56A6","#82C91E","#2F56A6",],
@@ -31,7 +31,7 @@ var myChart = new Chart(ctx, {
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
             hoverBorderColor: "#eeeeee",
-            data: [3175000,618000,2415000,250000,25633000,3510000]
+            data: [25633000,3510000,3175000,2415000,618000,250000]
         }]
     }
     ,
