--- a/templates/doughnut16/index.html
+++ b/templates/doughnut16/index.html
@@ -23,7 +23,7 @@ var ctx = document.getElementById("doughnut2");
 var myChart = new Chart(ctx, {
     type: 'doughnut',
     data: {
-        labels: ["Playgrounds","Walkways or Bridges","Ballfields or Basketball","Parks","Community Gardens","Piers"],
+        labels: ["Playgrounds 72%","Walkways or Bridges 11%","Ballfields or Basketball 9%","Parks 7%","Community Gardens 2%"],
         datasets: [{
             label: 'Type of Projects Funded',
             backgroundColor:["#82C91E","#2F56A6","#82C91E","#2F56A6","#82C91E","#2F56A6","#82C91E","#2F56A6",],
@@ -31,7 +31,7 @@ var myChart = new Chart(ctx, {
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
             hoverBorderColor: "#eeeeee",
-            data: [25633000,3510000,3175000,2415000,618000,250000]
+            data: [25633000,3760000,3175000,2415000,618000]
         }]
     }
     ,
