--- a/templates/doughnut16/index.html
+++ b/templates/doughnut16/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Participatory Budget Funded Project Types</title>
+        <title>Open Space Capital Funded Project Types 2007-2016</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
 
@@ -16,9 +16,9 @@
 
 Chart.defaults.global.responsive = true
 Chart.defaults.global.maintainAspectRatio = true
-Chart.defaults.global.legend.display= false
+Chart.defaults.global.legend.display= true
 
-var ctx = document.getElementById("doughnut2");
+var ctx = document.getElementById("doughnut16");
 
 var myChart = new Chart(ctx, {
     type: 'doughnut',
