--- a/templates/line/index.html
+++ b/templates/line/index.html
@@ -25,7 +25,7 @@ var myChart = new Chart(ctx, {
     data: {
         labels: ["2007","2008","2009","2010","2011","2012","2013","2014","2015","2016","2017","2018"],
         datasets: [{
-            label: 'Open Space Capital Funding',
+            label: 'Capital Funding',
             fill: false,
             lineTension: .5,
             backgroundColor:"#82C91E",
