naming problem resolved

--- a/templates/doughnut16/index.html
+++ b/templates/doughnut16/index.html
@@ -11,12 +11,12 @@
     <body>
 
 
-<canvas id="doughnut2" width=auto height="250"></canvas>
+<canvas id="doughnut16" width=auto height="250"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
 Chart.defaults.global.maintainAspectRatio = true
-Chart.defaults.global.legend.display= false
+Chart.defaults.global.legend.display= true
 
 var ctx = document.getElementById("doughnut16");
 
