--- a/templates/doughnut17/index.html
+++ b/templates/doughnut17/index.html
@@ -23,7 +23,7 @@ var ctx = document.getElementById("doughnut16");
 var myChart = new Chart(ctx, {
     type: 'doughnut',
     data: {
-        labels: ["Arts Programming 50%","Museums, Art Galleries, and Theaters 25%","Libraries 16%","Affordable artist housing 7%","Public Art 1%"],
+        labels: ["Arts Prgrms 50%","Museums and Theaters 25%","Libraries 16%","Affordable Artist Housing 7%","Public Art 1%"],
         datasets: [{
             label: 'Type of Projects Funded',
             backgroundColor:["#BE4BDB","#CC76E2","#DBA2EA","#EACDF1","#EDD6F3"],
