--- a/templates/barhorizontal10/index.html
+++ b/templates/barhorizontal10/index.html
@@ -10,7 +10,7 @@
     <body>
 
 
-<canvas id="barhorizontal10" width="100" max-height="1000"></canvas>
+<canvas id="barhorizontal10" width=auto height="250"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
