--- a/templates/barhorizontal11/index.html
+++ b/templates/barhorizontal11/index.html
@@ -10,12 +10,12 @@
     <body>
 
 
-<canvas id="barhorizontal11" width="100" max-height="1000"></canvas>
+<canvas id="barhorizontal11" width=auto max-height="400"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
 Chart.defaults.global.legend.display= true
-// Chart.defaults.global.maintainAspectRatio = true
+Chart.defaults.global.maintainAspectRatio = true
 
 
 
