--- a/templates/barhorizontal11/index.html
+++ b/templates/barhorizontal11/index.html
@@ -10,7 +10,7 @@
     <body>
 
 
-<canvas id="barhorizontal11" width=auto max-height="400"></canvas>
+<canvas id="barhorizontal11" width="400" max-height=auto ></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
