--- a/templates/barhorizontal11/index.html
+++ b/templates/barhorizontal11/index.html
@@ -15,7 +15,7 @@
 
 Chart.defaults.global.responsive = true
 Chart.defaults.global.legend.display= true
-Chart.defaults.global.maintainAspectRatio = true
+Chart.defaults.global.maintainAspectRatio = false
 
 
 
