--- a/templates/bar7/index.html
+++ b/templates/bar7/index.html
@@ -10,7 +10,7 @@
     <body>
 
 
-<canvas id="bar7" width=auto max-height="400"></canvas>
+<canvas id="bar7" width="600" height="600"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
