--- a/templates/barhorizontal9/index.html
+++ b/templates/barhorizontal9/index.html
@@ -82,7 +82,7 @@ var myChart = new Chart(ctx, {
                 ],
         datasets: [{
             label: 'FY 2017',
-            backgroundColor:"#CACACA",
+            backgroundColor:"#82C91E",
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
@@ -91,7 +91,7 @@ var myChart = new Chart(ctx, {
         },
         {
             label: 'FY 2018',
-            backgroundColor:"#2F56A6",
+            backgroundColor:"#228AE6",
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
