--- a/templates/barhorizontal11/index.html
+++ b/templates/barhorizontal11/index.html
@@ -122,9 +122,9 @@ var myChart = new Chart(ctx, {
         xAxes: [{
           display: true,
           ticks: {
-            beginAtZero: true,
-            callback: function(value) {
-              return value.toLocaleString('en-US');
+            beginAtZero: false,
+            callback: function(value, index, values) {
+              return '$'+value/1000000+'M';
             }
           }
         }],
