--- a/templates/barhorizontal9/index.html
+++ b/templates/barhorizontal9/index.html
@@ -142,7 +142,19 @@ var myChart = new Chart(ctx, {
 					return title;
 				},
 				label: function(tooltipItem, data) {
-					var datasetLabel = data.datasets[tooltipItem.datasetIndex].label || '';
+          //PERCENTAGE - get the concerned dataset
+          var dataset = data.datasets[tooltipItem.datasetIndex];
+          //PERCENTAGE - calculate the total of this data set
+          var total = dataset.data.reduce(function(previousValue, currentValue, currentIndex, array) {
+          return previousValue + currentValue;
+          });
+          //PERCENTAGE - get the current items value
+          var currentValue = dataset.data[tooltipItem.index];
+          //PERCENTAGE - calculate the precentage based on the total and current item, also this does a rough rounding to give a whole number
+          var precentage = Math.floor(((currentValue/total) * 100)+0.5);
+          return precentage + "%";
+          //$ AMOUNT
+          var datasetLabel = data.datasets[tooltipItem.datasetIndex].label || '';
 					return '$'+tooltipItem.yLabel.toLocaleString('en-US')+' Million';
 				}
         }
