--- a/templates/line7/index.html
+++ b/templates/line7/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>National Unemployment</title>
+        <title>New York City Unemployment</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
 
@@ -10,7 +10,7 @@
     <body>
 
 
-<canvas id="line5" width=auto max-height="400"></canvas>
+<canvas id="line7" width=auto max-height="400"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
@@ -18,14 +18,14 @@ Chart.defaults.global.tooltips.backgroundColor="grey"
 Chart.defaults.global.maintainAspectRatio = true
 Chart.defaults.global.legend = false
 
-var ctx = document.getElementById("line5");
+var ctx = document.getElementById("line7");
 
 var myChart = new Chart(ctx, {
     type: 'line',
     data: {
         labels: ["2007","2008","2009","2010","2011","2012","2013","2014","2015","2016","2017"],
         datasets: [{
-            label: 'National Unemployment',
+            label: 'New York City Unemployment',
             fill: false,
             lineTension: .5,
             backgroundColor:"#BE4BDB",
@@ -46,7 +46,7 @@ var myChart = new Chart(ctx, {
             pointHitRadius: 4,
             hoverBackgroundColor: "#9E9E9E",
             hoverBorderColor: "#eeeeee",
-            data: [4.6,5.8,9.3,9.6,8.9,8.1,7.4,6.2,5.3,4.9,4.4]
+            data: [5.1,5.7,9.4,9.5,9.1,9.3,8.7,7.2,5.7,5.2,4.2]
         }]
 
     },
