changed from horizontal to vertical

--- a/templates/barhorizontal15/index.html
+++ b/templates/barhorizontal15/index.html
@@ -69,7 +69,7 @@ Chart.defaults.scale = {
 var ctx = document.getElementById("barhorizontal15");
 
 var myChart = new Chart(ctx, {
-    type: 'horizontalBar',
+    type: 'bar',
     data: {
         labels: [
           "Finance & Insurance",
