--- a/templates/barhorizontal15/index.html
+++ b/templates/barhorizontal15/index.html
@@ -110,6 +110,8 @@ var myChart = new Chart(ctx, {
           display: true,
           ticks: {
             beginAtZero: true,
+            callback: function(value) {
+              return '$'+value.toLocaleString('en-US');
           }
         }]
       },
