--- a/templates/barhorizontal16/index.html
+++ b/templates/barhorizontal16/index.html
@@ -109,12 +109,13 @@ var myChart = new Chart(ctx, {
         yAxes: [{
           display: true,
           ticks: {
-            beginAtZero: true,
+
+            min: -50000,
             callback: function(value) {
               return '$'+value.toLocaleString('en-US');
+            }
           }
-        }]
-      },
+      }],
       tooltips: {
         callbacks: {
 /*
@@ -142,7 +143,7 @@ var myChart = new Chart(ctx, {
         }
       }
     }
-
+}
 });
 </script>
     </body>
