--- a/templates/doughnut22/index.html
+++ b/templates/doughnut22/index.html
@@ -31,7 +31,7 @@ var myChart = new Chart(ctx, {
           ],
         datasets: [{
             label: 'FY19 Taxes in Preliminary Budget',
-            backgroundColor:["#BE4BDB","#F59F00","#228AE6","#82C91E"],
+            backgroundColor:["#228AE6","#4EA1EB","#7AB8F0","#7AB8F0","#D2E7FA","#FFFFFF"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
