--- a/templates/doughnut21/index.html
+++ b/templates/doughnut21/index.html
@@ -30,7 +30,7 @@ var myChart = new Chart(ctx, {
           ],
         datasets: [{
             label: 'FY19 Revenues in Preliminary Budget',
-            backgroundColor:["#228AE6","#BE4BDB","#82C91E","#F59F00"],
+            backgroundColor:["#2F56A6","#BE4BDB","#82C91E","#F59F00"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
