--- a/templates/barhorizontal17/index.html
+++ b/templates/barhorizontal17/index.html
@@ -80,7 +80,7 @@ var myChart = new Chart(ctx, {
         ],
         datasets: [{
             label: 'FY18-FY22 Average Annual Revenue Growth',
-            backgroundColor:["#FFFFFF","#D2E7FA","#7AB8F0","#4EA1EB","#228AE6"],
+            backgroundColor:["#2F56A6","#D2E7FA","#7AB8F0","#4EA1EB","#228AE6"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
