--- a/templates/line8/index.html
+++ b/templates/line8/index.html
@@ -28,24 +28,24 @@ var myChart = new Chart(ctx, {
             label: 'Rent Burden Rate, Citywide',
             fill: false,
             lineTension: .5,
-            backgroundColor:"#BE4BDB",
-            borderColor: "#BE4BDB",
+            backgroundColor:"#82C91E",
+            borderColor: "#82C91E",
             borderWidth: 3,
             borderCapStyle: 'butt',
             borderDash: [],
             borderDashOffset: 0.0,
             borderJoinStyle: 'miter',
-            pointBorderColor: "#23417D",
-            pointBackgroundColor: "#23417D",
+            pointBorderColor: "#2F56A6",
+            pointBackgroundColor: "#2F56A6",
             pointBorderWidth: 5,
             pointHoverRadius: 6,
-            pointHoverBackgroundColor: "#BE4BDB",
-            pointHoverBorderColor: "#BE4BDB",
+            pointHoverBackgroundColor: "#82C91E",
+            pointHoverBorderColor: "#82C91E",
             pointHoverBorderWidth: 2,
             pointRadius: 3,
             pointHitRadius: 4,
-            hoverBackgroundColor: "#9E9E9E",
-            hoverBorderColor: "#eeeeee",
+            hoverBackgroundColor: "#82C91E",
+            hoverBorderColor: "#82C91E",
             data: [42,41,42,42,44,45,45,45,46,44,44]
         }]
 
