--- a/templates/bar9/index.html
+++ b/templates/bar9/index.html
@@ -15,7 +15,7 @@
 
 Chart.defaults.global.responsive = true
 Chart.defaults.global.legend.display= false
-Chart.defaults.global.maintainAspectRatio = true
+Chart.defaults.global.maintainAspectRatio = false
 
 Chart.defaults.scale = {
 		display: true,
