--- a/templates/barhorizontal15/index.html
+++ b/templates/barhorizontal15/index.html
@@ -111,7 +111,7 @@ var myChart = new Chart(ctx, {
           ticks: {
             beginAtZero: true,
             callback: function(value) {
-              return value.toLocaleString('en-US')+" Jobs";
+              return value.toLocaleString('en-US')+" Workers";
             }
           }
         }]
@@ -139,7 +139,7 @@ var myChart = new Chart(ctx, {
 				},
 				label: function(tooltipItem, data) {
 					var datasetLabel = data.datasets[tooltipItem.datasetIndex].label || '';
-					return tooltipItem.xLabel.toLocaleString('en-US')+ " Jobs";
+					return tooltipItem.xLabel.toLocaleString('en-US')+ " Workers";
 				}
         }
       }
